# curlForAndroidDemo

./: .gitignore  README.md  curl_android_build.sh
curl_toolchain/lib/pkgconfig/: python.pc
curl_toolchain/lib/python2.7/: _sysconfigdata.py
curl_toolchain/lib/python2.7/config/: Makefile  config.c
curl_toolchain/lib/python2.7/lib2to3/: Grammar2.7.5.final.0.pickle
libCurlDemo/: local.properties
libCurlDemo/app/: CMakeLists.txt  build.gradle
libCurlDemo/app/src/main/: AndroidManifest.xml
libCurlDemo/app/src/main/cpp/: CTNNetWork.cpp  CTNNetWork.h  JNILog.h  MediaType.h  MultiCurlEpoll.cpp  RequestBody.h  curl_post_form.cpp  test.cpp
libCurlDemo/app/src/main/cpp/curl/: curl_config.h
libCurlDemo/app/src/main/cpp/jni/: BootRegister.h  CommFunction.cpp  CommFunction.h  CompilerUtil.h  JNILoad.cpp  JNILoad.h  ScopeJEnv.cpp  ScopeJEnv.h  ScopedJstring.cpp  ScopedJstring.h  VarCache.cpp  VarCache.h
libCurlDemo/app/src/main/java/com/ralph/demo/: MainActivity.java  NetWork.java  PushService.java
libCurlDemo/app/src/main/jniLibs/: CMakeLists.txt
libCurlDemo/app/src/main/res/values/: strings.xml
libCurlDemo/gradle/wrapper/: gradle-wrapper.properties
